# projects

./: .gitignore  .gitmodules  Cargo.toml  Kick.toml  Projects.toml  config.toml  run
data/: OxidizeBot.header.md  OxidizeBot.lib.md  OxidizeBot.readme.md  ci.yml  default_workflow.yml  rune.header.md  rune.lib.md  rune.readme.md  weekly.yml
src/: actions.rs  badges.rs  cargo.rs  cli.rs  config.rs  ctxt.rs  file.rs  git.rs  main.rs  manifest.rs  model.rs  params.rs  repos.rs  templates.rs  validation.rs  workspace.rs
src/actions/: check.rs  run.rs  status.rs
src/cli/: msrv.rs
src/validation/: cargo.rs  ci.rs  readme.rs
tool/: Cargo.toml
tool/src/: badges.rs  config.rs  ctxt.rs  file.rs  gitmodules.rs  main.rs  model.rs  validation.rs  workspace.rs
tool/src/cli/: check.rs  foreach.rs  msrv.rs  status.rs
tool/src/validation/: ci.rs
