[package]
name = "tool"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
http = "0.2.8"
pulldown-cmark = "0.9.2"
relative-path = { version = "1.7.2", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
thiserror = "1.0.37"
toml = { version = "0.5.9", features = ["preserve_order"] }
toml_edit = "0.14.4"
