[package]
name = "tool"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.15", features = ["derive"] }
handlebars = "4.3.5"
pulldown-cmark = "0.9.2"
relative-path = { version = "1.7.2", features = ["serde"] }
reqwest = "0.11.12"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
toml = { version = "0.5.9", features = ["preserve_order"] }
toml_edit = "0.14.4"
unicycle = "0.9.2"
url = "2.3.1"
