[package]
name = "tool"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
handlebars = "4.3.6"
pulldown-cmark = "0.9.2"
relative-path = { version = "1.8.0", features = ["serde"] }
reqwest = "0.11.14"
serde = { version = "1.0.155", features = ["derive"] }
serde_yaml = "0.9.19"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
toml = { version = "0.7.2", features = ["preserve_order"] }
toml_edit = "0.19.5"
unicycle = "0.9.3"
url = "2.3.1"
